Fixed gap between docs header and nav

--- a/styleguide/kss-style.scss
+++ b/styleguide/kss-style.scss
@@ -76,7 +76,7 @@ $kss-sidebar-width: 12.5rem;
 
 .kss-main {
 	left: 0;
-	padding-top: 3.75rem;
+	padding-top: 3rem;
 	position: relative;
 	transition: left 0.2s;
 	width: 100vw;
